--- a/project-app/src/app/app.component.html
+++ b/project-app/src/app/app.component.html
@@ -1,46 +1,62 @@
 <div class="introduction-wrapper">
-    <div class="name-job-wrapper">
-        <h1 class="name-content">Name Content</h1>
-        <h3 class="job-content">Developer Content</h3>
-    </div>
-    <div class="text-content">
-        <div class="summary">
-            <p>Short Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <ul>
-                <li><a href="#">LinkedIn Profile link</a></li>
-            </ul>
-        </div> 
-        <img class="image-content img-fluid rounded" src="#" alt="Profile Picture"/>
+    <div class="container">
+        <div class="col-md-6 col-lg-12">
+            <div class="row justify-content-center align-items-center">
+                <h1 class="col-md-7 col-lg-10 offset-lg-1 name-content align-self-center">Name Content</h1>
+                <h3 class="col-md-6 col-lg-5 offset-lg-1 job-content">Job title Content</h3>
+            </div>
+            <div class="text-content">
+                <div class="row justify-content-center summary">
+                    <p class="col-md-3 col-lg-5">Short Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <img class="col-md-1 col-lg-2" src="#" alt="Profile Picture"/>
+                </div>
+                    <ul class="row justify-content-start">
+                        <li class="col-lg-3 offset-lg-3"><a href="#">LinkedIn Profile</a></li>
+                        <li class="col-lg-3"><a href="#">Detailed Introduction</a></li>
+                    </ul>
+            </div>
+        </div>
     </div>
 </div>
-<div class="projects">
-    <div class="project">
-        <h6>Test Project Title 1</h6>
-        <img class="image-content img-fluid rounded" src="#" alt="Project Picture 1"/>
-        <p>Project short summary.Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi</p>
+<div class="container-fluid">
+    <div class="row row-cols-1 row-cols-xlg-2 justify-content-center align-items-center">
+        <div class="project col">
+            <div class="row row-cols-1 no-gutters">
+                <h6 class="col">Test Project Title 1</h6>
+                <img class="col " src="#" alt="Project Picture 1"/>
+                <p class="">Project short summary.Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi</p>
+            </div>
+        </div>
+        <div class="project col">
+            <div class="row row-cols-1 no-gutters">
+                <h6 class="col">Test Project Title 2</h6>
+                <img class="col " src="#" alt="Project Picture 1"/>
+                <p class="">Project short summary.Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi</p>
+            </div>
+        </div>
+        <div class="project col">
+            <div class="row row-cols-1 no-gutters">
+                <h6 class="col">Test Project Title 3</h6>
+                <img class="col " src="#" alt="Project Picture 1"/>
+                <p class="">Project short summary.Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi</p>
+            </div>
+        </div>
+        <div class="project col">
+            <div class="row row-cols-1 no-gutters">
+                <h6 class="col">Test Project Title 4</h6>
+                <img class="col " src="#" alt="Project Picture 1"/>
+                <p class="">Project short summary.Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi</p>
+            </div>
+        </div>
     </div>
-    <div class="project">
-        <h6>Test Project Title 2</h6>
-        <img class="image-content img-fluid rounded" src="#" alt="Project Picture 2"/>
-        <p>Project short summary.Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi</p>
-    </div>
-    <div class="project">
-        <h6>Test Project Title 3</h6>
-        <img class="image-content img-fluid rounded" src="#" alt="Project Picture 3"/>
-        <p>Project short summary.Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi</p>
-    </div>
-    <div class="project">
-        <h6>Test Project Title 4</h6>
-        <img class="image-content img-fluid rounded" src="#" alt="Project Picture 4"/>
-        <p>Project short summary.Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi</p>
-    </div>
+    
 </div>
