--- a/project-app/src/styles.css
+++ b/project-app/src/styles.css
@@ -6,75 +6,36 @@ html {
     font-weight: 400;
 }
 
-*, *::before, *::after {
-    box-sizing: inherit;
-}
-
 /* HEADER
 -------------------------------------*/
 
 .navbar {
     height: 80px;
-    background-image: url(assets/Rectangle.png);
+    background-color: white;
     background-size: cover;
-    display: grid;
-    grid-template-columns: 2fr 5fr;
-    column-gap: 20px;
 }
 
 .navbar a {
     color: black;
 }
 
-.navbar .logo-content-wrap {
-    display: inline-flex;
-    justify-content: flex-start;
-}
-
-.navbar .item-list {
-    display: inline-flex;
-    justify-content: flex-end;
-}
-
-.navbar .logo {
-    justify-content: flex-start;
-    display: inline-block;
-    margin: 0 0 0 55px;
-    padding-bottom: 15px;
-}
-
-.navbar > div > ul {
+.navbar div > ul {
     list-style-type: none;
 }
 
-.navbar > div > ul > li {
-    display: inline-flex;
-    justify-content: center;
-    margin: 15px;
-    padding-right: 15px;
-    padding-top: 5px;
-    vertical-align: middle;
-}
 
-.navbar > div > ul > li:last-of-type {
-    display: inline-flex;
-    justify-content: center;
-    margin: 15px;
-    padding-right: 65px;
-}
-
-.navbar .menu-item {
+.menu-item {
     text-decoration: none;
     font-family: 'Open Sans Condensed', sans-serif;
+    margin: 15px;
 }
 
-.navbar .menu-item:hover {
+.menu-item:hover {
     font-size: 20px;
     color: blue;
     font-weight: 500;
     text-decoration: none;
-    padding: 0;
-    margin: -11px;
+    margin: 5px;
 }
 
 
@@ -84,12 +45,7 @@ footer {
     margin-top: 80px;
 }
 
-footer > ul {
-    display: flex;
+footer > ul  {
+    padding: 25px;
     list-style-type: none;
-    justify-content: center;
-}
-
-footer > ul > li {
-    padding: 20px;
 }
