Refactor and placeholder images

--- a/project-app/src/app/app.component.html
+++ b/project-app/src/app/app.component.html
@@ -9,54 +9,46 @@
                 <div class="row justify-content-center summary">
                     <p class="col-md-3 col-lg-5">Short Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                         sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                    <img class="col-md-1 col-lg-2" src="#" alt="Profile Picture"/>
+                    <img class="col-md-1 col-lg-2 profile-pic" src="../assets/profile.jpeg" alt="Profile Picture"/>
                 </div>
-                    <ul class="row justify-content-start">
-                        <li class="col-lg-3 offset-lg-3"><a href="#">LinkedIn Profile</a></li>
-                        <li class="col-lg-3"><a href="#">Detailed Introduction</a></li>
-                    </ul>
+                <ul class="row justify-content-start">
+                    <li class="col-lg-3 offset-lg-3"><a class="" href="#">LinkedIn Profile</a ></li>
+                    <li class="col-lg-4 offset-lg-0"><a class="" href="">Detailed Introduction</a></li>
+                </ul>
             </div>
         </div>
     </div>
 </div>
 <div class="container-fluid">
-    <div class="row row-cols-1 row-cols-xlg-2 justify-content-center align-items-center">
-        <div class="project col">
-            <div class="row row-cols-1 no-gutters">
-                <h6 class="col">Test Project Title 1</h6>
-                <img class="col " src="#" alt="Project Picture 1"/>
-                <p class="">Project short summary.Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi</p>
-            </div>
+    <div class="d-flex flex-wrap justify-content-around">
+        <div class="project d-flex flex-wrap flex-column align-items-center justify-content-between">
+            <h6 class="">Test Project Title 1</h6>
+            <img class="d-block img-fluid img-thumbnail" src="../assets/ai.jpeg" alt="Project Picture 1"/>
+            <p class="align-self-end">Project short summary.Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+            </p>       
         </div>
-        <div class="project col">
-            <div class="row row-cols-1 no-gutters">
-                <h6 class="col">Test Project Title 2</h6>
-                <img class="col " src="#" alt="Project Picture 1"/>
-                <p class="">Project short summary.Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi</p>
-            </div>
+        <div class="project d-flex flex-wrap flex-column align-items-center justify-content-between">
+            <h6 class="">Test Project Title 1</h6>
+            <img class="d-block img-fluid img-thumbnail" src="../assets/ai.jpeg" alt="Project Picture 1"/>
+            <p class="align-self-end">Project short summary.Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi</p>
         </div>
-        <div class="project col">
-            <div class="row row-cols-1 no-gutters">
-                <h6 class="col">Test Project Title 3</h6>
-                <img class="col " src="#" alt="Project Picture 1"/>
-                <p class="">Project short summary.Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi</p>
-            </div>
+        <div class="project d-flex flex-wrap flex-column align-items-center justify-content-between">
+            <h6 class="">Test Project Title 1</h6>
+            <img class="d-block img-fluid img-thumbnail" src="../assets/ai.jpeg" alt="Project Picture 1"/>
+            <p class="align-self-end">Project short summary.Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi</p>
         </div>
-        <div class="project col">
-            <div class="row row-cols-1 no-gutters">
-                <h6 class="col">Test Project Title 4</h6>
-                <img class="col " src="#" alt="Project Picture 1"/>
-                <p class="">Project short summary.Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi</p>
-            </div>
+        <div class="project d-flex flex-wrap flex-column align-items-center justify-content-between">
+            <h6 class="">Test Project Title 1</h6>
+            <img class="d-block img-fluid img-thumbnail" src="../assets/ai.jpeg" alt="Project Picture 1"/>
+            <p class="align-self-end">Project short summary.Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi</p>
         </div>
-    </div>
-    
+    </div>  
 </div>
