--- a/project-app/src/styles.css
+++ b/project-app/src/styles.css
@@ -43,6 +43,7 @@ html {
 -------------------------------------*/
 footer {
     margin-top: 80px;
+    background: rgb(243, 240, 240);
 }
 
 footer > ul  {
