--- a/project-app/src/app/app.component.css
+++ b/project-app/src/app/app.component.css
@@ -35,11 +35,23 @@
 }
 
 .text-content ul li > a{
-    font-size: 22px;
-    background-color: grey;
+    font-size: 25px;
+    background-color: rgb(128, 125, 125);
     border-radius: 10%;
     padding: 5px;
     color: honeydew;
+    text-shadow: 0.25px 0.25px limegreen;
+}
+
+
+.text-content ul li > a:hover{
+    text-decoration: none;
+    font-size: 25px;
+    background-color: rgb(165, 159, 159);
+    border-radius: 10%;
+    padding: 5px;
+    color: honeydew;
+    text-shadow: 0.65px 0.65px limegreen;
 }
 
 .image-content {
@@ -47,29 +59,65 @@
 }
 /*----------------------PROJECTS--------------*/
 
-.project {
-    display: inline-block;
-    background: rgb(245, 244, 244);
-    max-width: 600px;
-    height: 300px;
-    margin-left: 25px;
-    margin-top: 60px;
-    border-color: black;
-    border-style: solid;
-    border-width: thin;
-    overflow: hidden;
+@media screen and (min-width: 992px) {
+    .project {
+        margin-left: 31px;
+    }
 }
 
-.project  h6 {
-    font-size: 25px;
+@media screen and (max-width: 991px) {
+    .project {
+        margin-left: 25px;
+    }
+}
+
+.project {
+    /*display: inline-block;*/
+    max-width: 700px;
+    height: 500px;
+    margin-top: 100px;
+    border-color: rgb(192, 192, 192);
+    border-style: solid;
+    border-width: thin;
+    border-radius: 5%;
+    overflow: hidden;
+    box-shadow: 5px 5px 5px 5px grey; 
+    background: linear-gradient(180deg, white 50%,rgba(240, 240, 240, 0.822) 50%);
+    position: relative;
+}
+
+.project h6 {
+    margin-top: 15px;
+    font-size: 35px;
+    border-bottom: ridge;
+    width: 100%;
+    text-align: center;
+    padding: 10px;
+    text-transform: capitalize;
+    letter-spacing: 3px;
+    text-shadow: 1.4px 1.4px;
+    color: rgba(27, 27, 27, 0.55);
+    background-color: rgb(255, 255, 255);
 }
 
 .project img {
-    margin-left: 150px;
+    position: absolute;
+    top: 80px;
+    height: 58%;
+    width: 100%;
+    border: 0;
 }
 
 .project p {
+    margin-top: 75px;
     text-align: justify;
     font-family: 'Playfair Display', serif;
+    font-size: 20px;
     padding: 10px 40px;
+    border-top: ridge;
+}
+
+.profile-pic {
+    margin-top: 13px;
+    margin-left: 30px;
 }
