--- a/project-app/src/app/app.component.html
+++ b/project-app/src/app/app.component.html
@@ -1,19 +1,19 @@
 <div class="introduction-wrapper">
     <div class="container">
-        <div class="col-md-6 col-lg-12">
+        <div class="col-md-10 col-lg-12">
             <div class="row justify-content-center align-items-center">
-                <h1 class="col-md-7 col-lg-10 offset-lg-1 name-content align-self-center">Name Content</h1>
-                <h3 class="col-md-6 col-lg-5 offset-lg-1 job-content">Job title Content</h3>
+                <h1 class="col-md-10 col-lg-10 offset-2 offset-sm-1 offset-md-3 offset-lg-4 offset-xl-1 name-content align-self-center">Name Content</h1>
+                <h3 class="col-md-12 col-lg-5 offset-3 offset-1 offset-sm-2 offset-md-7  offset-lg-1 offset-xl-0 job-content">Job title Content</h3>
             </div>
             <div class="text-content">
                 <div class="row justify-content-center summary">
-                    <p class="col-md-3 col-lg-5">Short Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                    <p class="col-10 col-lg-5 offset-md-2 offset-lg-0">Short Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                         sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                    <img class="col-md-1 col-lg-2 profile-pic" src="../assets/profile.jpeg" alt="Profile Picture"/>
+                    <img class="col-5 col-lg-2 offset-md-6 offset-lg-0 profile-pic" src="../assets/profile.jpeg" alt="Profile Picture"/>
                 </div>
                 <ul class="row justify-content-start">
-                    <li class="col-lg-3 offset-lg-3"><a class="" href="#">LinkedIn Profile</a ></li>
-                    <li class="col-lg-4 offset-lg-0"><a class="" href="">Detailed Introduction</a></li>
+                    <li class="col-6 col-md-9 col-lg-3 offset-3 offset-md-3 offset-lg-3"><a class="" href="#">LinkedIn Profile</a ></li>
+                    <li class="col-7 col-md-12 col-lg-4 offset-2 offset-md-2 offset-lg-0"><a class="" href="">Detailed Introduction</a></li>
                 </ul>
             </div>
         </div>
@@ -21,34 +21,37 @@
 </div>
 <div class="container-fluid">
     <div class="d-flex flex-wrap justify-content-around">
-        <div class="project d-flex flex-wrap flex-column align-items-center justify-content-between">
+        <div class="project d-flex flex-column align-items-center justify-content-between">
             <h6 class="">Test Project Title 1</h6>
-            <img class="d-block img-fluid img-thumbnail" src="../assets/ai.jpeg" alt="Project Picture 1"/>
+            <img class="align-self-center img-fluid img-thumbnail" src="../assets/ai.jpeg" alt="Project Picture 1"/>
             <p class="align-self-end">Project short summary.Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                         sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                         Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
             </p>       
         </div>
-        <div class="project d-flex flex-wrap flex-column align-items-center justify-content-between">
+        <div class="project d-flex flex-column align-items-center justify-content-between">
             <h6 class="">Test Project Title 1</h6>
-            <img class="d-block img-fluid img-thumbnail" src="../assets/ai.jpeg" alt="Project Picture 1"/>
+            <img class="align-self-center img-fluid img-thumbnail" src="../assets/ai.jpeg" alt="Project Picture 1"/>
             <p class="align-self-end">Project short summary.Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                         sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi</p>
+                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+            </p>       
         </div>
-        <div class="project d-flex flex-wrap flex-column align-items-center justify-content-between">
+        <div class="project d-flex flex-column align-items-center justify-content-between">
             <h6 class="">Test Project Title 1</h6>
-            <img class="d-block img-fluid img-thumbnail" src="../assets/ai.jpeg" alt="Project Picture 1"/>
+            <img class="align-self-center img-fluid img-thumbnail" src="../assets/ai.jpeg" alt="Project Picture 1"/>
             <p class="align-self-end">Project short summary.Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                         sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi</p>
+                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+            </p>       
         </div>
-        <div class="project d-flex flex-wrap flex-column align-items-center justify-content-between">
+        <div class="project d-flex flex-column align-items-center justify-content-between">
             <h6 class="">Test Project Title 1</h6>
-            <img class="d-block img-fluid img-thumbnail" src="../assets/ai.jpeg" alt="Project Picture 1"/>
+            <img class="align-self-center img-fluid img-thumbnail" src="../assets/ai.jpeg" alt="Project Picture 1"/>
             <p class="align-self-end">Project short summary.Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                         sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi</p>
+                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+            </p>       
         </div>
     </div>  
 </div>
