--- a/project-app/src/styles.css
+++ b/project-app/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 html {
-    box-sizing: border-box;
+   /* box-sizing: border-box;*/
     font-size: 16px;
     color: black;
     font-weight: 400;
@@ -15,6 +15,8 @@ html {
     background-size: cover;
 }
 
+
+
 .navbar a {
     color: black;
 }
@@ -23,20 +25,65 @@ html {
     list-style-type: none;
 }
 
+/*
+@media screen and (min-width: 376px) {
+    .menu-item {
+        margin: 15px;
+    }
+    .menu-item:hover {
+        font-size: 20px;
+        margin: 5px;
+    }
+    
+}
+
+@media screen and (max-width: 375px) {
+    .menu-item {
+        margin: -40px;
+        padding: 45px;
+    }
+    .menu-item:hover {
+        margin: -38px;
+    }
+  
+}*/
+
+@media screen and (min-width: 575px) {
+    .menu-item:hover {
+        font-weight: 500;
+        font-size: 20px;
+        margin: 1px;
+    }
+}
+
+@media screen and (max-width: 575px) {
+    .navbar{
+        margin-bottom: 50px;
+    }
+}
+@media screen and (min-width: 1075px) {
+    .navbar div > ul {
+        padding-right: 100px;
+        font-size: larger;
+    }
+    .menu-item:hover {
+        font-weight: 500;
+        font-size: 20px;
+        margin: 10px;
+    }
+}
 
 .menu-item {
+    margin-left: 25px;
     text-decoration: none;
     font-family: 'Open Sans Condensed', sans-serif;
-    margin: 15px;
 }
 
 .menu-item:hover {
-    font-size: 20px;
     color: blue;
-    font-weight: 500;
     text-decoration: none;
-    margin: 5px;
 }
+
 
 
 /* FOOTER
