--- a/project-app/src/app/app.component.css
+++ b/project-app/src/app/app.component.css
@@ -1,211 +1,76 @@
-/* Introduction
--------------------------------------*/
-.introduction-wrapper {
-    padding-top: 150px;
-    padding-bottom: 50px;
-    background: rgb(245, 244, 244);
-}
-
-@media screen and (max-width: 376px) {
-    .name-content {
-        font-size: 40px;
-    }
-    .job-content {
-        font-size: 17px;
-    }
-    .summary > p{
-        font-size: 15px;
-    }
-    .summary > img {
-        width: 170px;
-    }
-    .text-content ul li > a{
-        font-size: 15px;
-    }
-}
-
-@media screen and (max-width: 576px) and (min-width: 376px){
-    .name-content {
-        font-size: 45px;
-    }
-    .job-content {
-        font-size: 20px;
-    }
-    .summary > p{
-        font-size: 18px;
-    }
-    .summary > img {
-        width: 180px;
-    }
-    .text-content ul li > a{
-        font-size: 17px;
-    }
-}
-
-@media screen and (min-width: 576px) {
-    .name-content {
-        font-size: 60px;
-    }
-    .job-content {
-        font-size: 25px;
-    }
-    .summary{
-        font-size: 20px;
-    }
-    .summary > img {
-        width: 190px;
-    }
-    .text-content ul li > a{
-        font-size: 19px;
-    }
-}
-
-@media screen and (min-width: 768px) {
-    .name-content {
-        font-size: 70px;
-    }
-    .job-content {
-        font-size: 30px;
-    }
-    .summary{
-        font-size: 22px;
-    }
-    .summary > img {
-        width: 200px;
-    }
-    .text-content ul li > a{
-        font-size: 20px;
-    }
-}
-
-@media screen and (min-width: 992px) {
-    .name-content {
-        font-size: 80px;
-    }
-    .job-content {
-        font-size: 30px;
-    }
-    .summary > img {
-        width: 200px;
-    }
-    .text-content ul li > a{
-        font-size: 25px;
-    }
-}
-
-@media screen and (min-width: 1200px) {
-    .name-content {
-        font-size: 130px;
-    }
-    .job-content {
-        font-size: 40px;
-    }
-}
-
-.name-content {
-    font-family: 'Bebas Neue', cursive;
-}
-
-.job-content {
-    font-family: 'Source Code Pro', monospace;
-}
-
-.text-content{
-    margin-top: 75px;
-    text-indent: 5%;
-    line-height: 45px;
-}
-
-.summary > p {
-    text-align: justify;
-    font-family: 'Playfair Display', serif;
-}
-
-.text-content ul {
-    margin-top: 35px;
-    list-style-type: none;
-    justify-content: space-evenly;
-}
-
-.text-content ul li > a{
-    /*font-size: 25px;*/
-    background-color: rgb(128, 125, 125);
-    border-radius: 10%;
-    padding: 5px;
-    color: honeydew;
-    text-shadow: 0.25px 0.25px limegreen;
-}
-
-
-.text-content ul li > a:hover{
-    text-decoration: none;
-    font-size: 25px;
-    background-color: rgb(165, 159, 159);
-    border-radius: 10%;
-    padding: 5px;
-    color: honeydew;
-    text-shadow: 0.65px 0.65px limegreen;
-}
-
-.image-content {
-    justify-self: center;
-}
-/*----------------------PROJECTS--------------*/
-
-@media screen and (min-width: 992px) {
-    .project {
-        margin-left: 31px;
-    }
-}
-
-@media screen and (max-width: 991px) {
-    .project {
-        margin-left: 25px;
-    }
-}
-
-.project {
-    max-width: 700px;
-    margin-top: 100px;
-    border-color: rgb(192, 192, 192);
-    border-style: solid;
-    border-width: thin;
-    border-radius: 5%;
-    overflow: hidden;
-    box-shadow: 5px 5px 5px 5px grey; 
-    background: linear-gradient(180deg, white 50%,rgba(240, 240, 240, 0.822) 50%);
-}
-
-.project h6 {
-    margin-top: 15px;
-    font-size: 35px;
-    border-bottom: ridge;
-    width: 100%;
-    text-align: center;
-    padding: 10px;
-    text-transform: capitalize;
-    letter-spacing: 3px;
-    text-shadow: 1.4px 1.4px;
-    color: rgba(27, 27, 27, 0.55);
-    background-color: rgb(255, 255, 255);
-}
-
-.project img {
-    height: 57%;
-    width: 100%;
-    border: 0;
-}
-
-.project p {
-    margin-top: 0 auto;
-    text-align: justify;
-    font-family: 'Playfair Display', serif;
-    font-size: 20px;
-    padding: 10px 40px;
-    border-top: ridge;
-}
-
-.profile-pic {
-    margin-top: 13px;
-    margin-left: 30px;
-}
+/* You can add global styles to this file, and also import other style files */
+html {
+    /* box-sizing: border-box;*/
+     font-size: 16px;
+     color: black;
+     font-weight: 400;
+ }
+ 
+ /* HEADER
+ -------------------------------------*/
+ 
+ .navbar {
+     height: 80px;
+     background-color: white;
+     background-size: cover;
+ }
+ 
+ 
+ 
+ .navbar a {
+     color: black;
+ }
+ 
+ .navbar div > ul {
+     list-style-type: none;
+ }
+ 
+ @media screen and (min-width: 575px) {
+     .menu-item:hover {
+         font-weight: 500;
+         font-size: 20px;
+         margin: 1px;
+     }
+ }
+ 
+ @media screen and (max-width: 575px) {
+     .navbar{
+         margin-bottom: 50px;
+     }
+ }
+ @media screen and (min-width: 1075px) {
+     .navbar div > ul {
+         padding-right: 100px;
+         font-size: larger;
+     }
+     .menu-item:hover {
+         font-weight: 500;
+         font-size: 20px;
+         margin: 10px;
+     }
+ }
+ 
+ .menu-item {
+     margin-left: 25px;
+     text-decoration: none;
+     font-family: 'Open Sans Condensed', sans-serif;
+ }
+ 
+ .menu-item:hover {
+     color: blue;
+     text-decoration: none;
+ }
+ 
+ 
+ 
+ /* FOOTER
+ -------------------------------------*/
+ footer {
+     margin-top: 80px;
+     background: rgb(243, 240, 240);
+ }
+ 
+ footer > ul  {
+     padding: 25px;
+     list-style-type: none;
+ }
