Detailed intro template

--- a/project-app/src/app/app.component.html
+++ b/project-app/src/app/app.component.html
@@ -11,7 +11,7 @@
                   <a class="dropdown-item" routerLink="/projectItem" >Test ProjectItem 1</a>
                   <a class="dropdown-item" href="#">Test Dropdown Item 2</a>
                   <a class="dropdown-item" href="#">Test Dropdown Item 3</a>
-                  <a class="dropdown-item" routerLink="/projectList">Test Dropdown Item 4</a>
+                  <a class="dropdown-item" routerLink="/projectList">List of projects</a>
               </div>
             </div>
           </li>
