--- a/project-app/src/app/detailed-project/detailed-project.component.html
+++ b/project-app/src/app/detailed-project/detailed-project.component.html
@@ -1,1 +1,26 @@
-Hello Test!
+<div class="item-wrap">
+    <h1>Test project title</h1>
+    <h4>Test project subhead</h4>
+    <summary>
+        Project short summary.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi.<br>Project short summary.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+    </summary>
+    <article>
+        Project short summary.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi. <img  alt="Project picture"/> <br>
+        Project short summary.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi. <img  alt="Project picture"/> <br>
+        Project short summary.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi.<br> <img  alt="Project picture"/> Project short summary.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+    </article>
+    <aside>
+        Project categories
+        <ul>
+           <li>Test category 1</li>
+           <li>Test category 2</li>
+           <li>Test category 3</li>
+        </ul>
+    </aside>
+</div>
