--- a/project-app/src/app/project-item-list/project-item-list.component.html
+++ b/project-app/src/app/project-item-list/project-item-list.component.html
@@ -2,7 +2,7 @@
     <h1 class="row justify-content-center">Project categories</h1>
     <div class="categories row justify-content-center">{{ projectItems | categoryList }}</div>
 </div>
-<div class="d-flex flex-wrap justify-content-around">
+<div class="d-flex flex-wrap justify-content-around wrap-list">
     <app-project-item *ngFor="let projectItem of projectItems"
     (delete)="onDeleteProjectItem($event)" 
     [projectItem]="projectItem">
